<resources>
    <string name="app_name">Square Insurance POS</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_logout">Logout</string>
    <string name="bike_insurance">Bike Insurance</string>
    <string name="car_insurance">Car Insurance</string>
    <string name="travel_insurance">Travel Insurance</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="commercial_vehicle_insurance">Commercial Vehicle Insurance (PCV)</string>
    <string name="about_us">About Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact_us">Contact Us</string>
    <string name="history">History</string>
    <string name="our_legacy">Our Legacy</string>
    <string name="square_history">Square Insurance Brokers Private Limited Was Incorporated In The State Of Rajasthan As Pvt. Ltd Company. Square Insurance Act As A Direct Insurance Broker By IRDA Under Insurance Brokers Regulations, 2002, Granted With License In April 2017.</string>
    <string name="square_history1">Insurance As Defined Is A Financial Risk Management Tool In Which The Insured Transfers A Risk Of Potential Financial Loss To The Insurance Company That Mitigates It In Exchange For Monetary Compensation Known As The Premium. It Is An Important Aspect Of Each Individual\'s Life To Continue With Financial Well-Being Of Family In Case Of Any Eventuality. Though We All Are Familiar With The Term \"Insurance\", There Exists A Huge Gap While Analysing The Need For Insurance.</string>
    <string name="square_history2">Square Insurance Brokers Private Limited Ensure To Meet This Gap Between What Customer Needs And What Customer Gets And Provides 360 Degree Transparent Vision To Our Customers. We Are Committed To Provide Timely, Honest, Reliable And Satisfying Services To Customer Needs.</string>
    <string name="irdai_insurance_broker_license">IRDAI INSURANCE BROKER LICENSE</string>
    <string name="code_no">CODE No.</string>
    <string name="cin_no">CIN NO.</string>
    <string name="iso_no">ISO 9001:2015 Registration No.</string>
    <string name="iradi_no">- 606</string>
    <string name="company_name">Square Insurance Private Limited</string>
    <string name="welcome">Welcome</string>
    <string name="qoatation1"><![CDATA[Use Latest Technology To Reduce \"Time & Efforts\" And Improve \"Convenience & Experience\" For Sales, Servicing & Communication]]></string>
    <string name="transparent">TRANSPARENT</string>
    <string name="qoatation2"><![CDATA[Use Latest Technology To Reduce \"Time & Efforts\" And Improve \"Convenience & Experience\" For Sales, Servicing & Communication]]></string>
    <string name="professional">PROFESSIONALS</string>
    <string name="qoatation3">A No-Compromise Parameter Backed With Strong Moral Principles And Values, Our Integrity Is Our Strength And A Reason For Our Client\'s Smile</string>
    <string name="integrity">INTEGRITY</string>
    <string name="qoatation4">Nothing Matters More To Us Than Our Clients. Our Team Is Fully Trained To Keep You Benefited With Prompt Actions On Your Requirements.</string>
    <string name="client">CLIENT FIRST</string>
    <string name="base_url">https://www.squareinsurance.in/</string>
    <string name="adults">ADULT(S)</string>
    <string name="childs">KID(S)</string>
    <string name="adult_1">Adult 1</string>
    <string name="rate_us">Rate Us</string>
    <string name="action_login">Login</string>
    <string name="privacy">Privacy and Policy</string>
    <string name="notification">Notifications</string>
    <string name="close">Close</string>
    <string name="become_pos">Become POS</string>
    <string name="next">Next</string>
    <string name="i_have_read_agree_to_the"><![CDATA[I have read & agree to the]]></string>
    <string name="upload_pan_card">Upload PAN card</string>
    <string name="upload_aadhar_card_front">Upload Aadhar Card Front</string>
    <string name="upload_aadhar_card_back">Upload Aadhar Card Back</string>
    <string name="upload_marksheet">Upload MarkSheet</string>
    <string name="upload_check">Upload Cheque</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="upload_signature">Upload Signature</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="products">Products</string>
    <string name="upload">Upload</string>
    <string name="line"><strike>₹ 890</strike></string>
    <string name="new_password">New Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nominee_name">Nominee Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="engine_number">Engine Number</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="hypothecation">Hypothecation ?</string>
    <string name="financier_name">Financier Name</string>
    <string name="btn_continue">continue</string>
    <string name="my_account">My Account</string>
    <string name="no_policies_found">No Policies Found</string>
    <string name="old_password">Old Password</string>
    <string name="update_password">Update Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update">UPDATE</string>
    <string name="register"><u>Register Here</u></string>
    <string name="renewal">Renewals</string>
    <string name="str_yes">Yes</string>
    <string name="btn_view">View Plan</string>
    <string name="phone_number">Contact Number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="otp">Verify OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_registered_phone_number">Enter Your Registered Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="policy_tenure">Policy Tenure</string>
    <string name="sum_insured">Sum Insured</string>
    <string name="personal_accident">Personal Accident</string>
    <string name="critical_illness_cover">Critical Illness Cover</string>
    <string name="maternity_coverage">Maternity Coverage</string>
    <string name="money">My Earning</string>
    <string name="wallet">Docs Wallet</string>
    <string name="edit">Edit</string>
    <string name="pancard">Pancard</string>
    <string name="aadhar_front">AAdhar Card Front</string>
    <string name="aadhar_back">AAdhar Card Back</string>
    <string name="qualification">Qualification</string>
    <string name="bank_cheque">Bank Cheque</string>
    <string name="profile_pic">Profile Photo</string>
    <string name="signature">Signature</string>
    <string name="client_party_name">Client/Party Name</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_file_back">Upload File Back</string>
    <string name="upload_rc_front">Upload RC Front</string>
    <string name="upload_rc_back">Upload RC Back</string>
    <string name="privacy_policy"><![CDATA[Privacy Policy & Terms of Use]]></string>
    <string name="individual">Individual</string>
    <string name="organisation">Organisation</string>
    <string name="vehicle_owned_by">Vehicle Owned by</string>
    <string name="third_party">Third Party</string>
    <string name="comprehensive">Comprehensive</string>
    <string name="select_plan">Select Plan</string>
    <string name="cover">Cover</string>
    <string name="addon_cover">Addon Cover</string>
    <string name="zero_depreciation">Zero Depreciation</string>
    <string name="filter">Filter</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="no_renewal_found">No Renewal Found</string>
    <string name="house_no_building_name">House no,Street no</string>
    <string name="road_name_are_colony">Road Name, Area, Colony</string>
    <string name="village_city">Village/City</string>
    <string name="no_quotes_found">No Quotation Available</string>
    <string name="link">Quotation link</string>
    <string name="copy">Copy</string>
    <string name="policy_number">Policy Number</string>
    <string name="ok">OK</string>
    <string name="pa_cover">PA Cover</string>
    <string name="owner_name">Owner Name</string>
    <string name="communication_address">Communication Address</string>
    <string name="nominee_relation">Nominee Relationship</string>
    <string name="nominee_age">Nominee DOB</string>
    <string name="policy_type">Policy Type</string>
    <string name="model_variant">Model Variant</string>
    <string name="manufacture_date">Manufacture Date</string>
    <string name="registration_date">Registration Date</string>
    <string name="pa_cover_narration">As per the recent IRDAI circular dated \n11-Dec-2018 \n \n(IRDAI/NL/CIR/MOTP/ 200/12/2018) \n\nEffective 1st Jan 2019\n \n<b>Personal Accident Cover</b> for owner driver (name on RC) is NOT compulsory if the vehicle owner individual: Doesn\'t have a valid driving license,\nOR\n Has a <b>Standalone Personal Accident Policy</b> of Rs. 15 lakhs, OR Has another car/bike where the \n<i>Owner Driver personal accident cover</i>\n is already taken.</string>
    <string name="pincode">Pincode</string>
    <string name="invoice_image">Invoice Image</string>
    <string name="previous_policy">Previous Policy</string>
    <string name="total_earning">Total Earning(₹)</string>
    <string name="btn_add">Add Lead</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="add_new">Add</string>
    <string name="note">NOTE : In case of multiple Son or Daughter enter age with comma(,)  like (22,20)</string>
    <string name="rto">RTO</string>
    <string name="upload_invoice">Upload Invoice</string>
    <string name="choose_file">Choose File</string>
    <string name="assigned">Assigned</string>
    <string name="lost">Lost</string>
    <string name="closed">Closed</string>
    <string name="in_process">In Process</string>
    <string name="pending">Pending</string>
    <string name="invoice">Invoice</string>
    <string name="doc">Document</string>
    <string name="rcf">RC Front</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile</string>
    <string name="tobacco_user">Tobacco User</string>
    <string name="accident_death_cover">Accident Death Cover</string>
    <string name="personal_accident_cover_rider">Personal Accident Cover rider</string>
    <string name="cancer_care_rider">Cancer Care rider</string>
    <string name="critical_illness_riser">Critical Illness riser</string>
    <string name="income_benefit_on_accidental_disability">Income Benefit on Accidental Disability</string>
    <string name="health">HEALTH</string>
    <string name="life">LIFE</string>
    <string name="travel">TRAVEL</string>
</resources>