<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".activity_pos.LatestQuoteActivity">

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHealth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/img_border"
            android:padding="5dp"
            android:onClick="onHealthClick"
            android:text="@string/health"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtLife"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onLifeClick"
            android:background="@drawable/img_border"
            android:padding="5dp"
            android:text="@string/life"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtTravel"
            android:layout_width="0dp"
            android:onClick="onTravelClick"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/img_border"
            android:padding="5dp"
            android:text="@string/travel"
            android:textAlignment="center" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingBottom="35dp"
        app:layout_constraintTop_toBottomOf="@+id/llFilter" />

    <RelativeLayout
        android:id="@+id/rlNoPolicies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:alpha=".35"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_panda" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty"
            android:layout_marginTop="20dp"
            android:text="@string/no_quotes_found"
            android:textAlignment="center" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>