<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".life.FilterLifeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/llSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/img_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/lblSumInsured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Sum Assured" />

                <include
                    layout="@layout/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" />

                <Spinner
                    android:id="@+id/spnSumIns"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/img_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tobacco_user" />

                <include
                    layout="@layout/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" />

                <Spinner
                    android:id="@+id/spnTobacco"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:entries="@array/no_yes" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCTA"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llSum"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtCoverTillAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:singleLine="true"
                android:text="60"
                android:textSize="12sp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCTA"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/addon_cover"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <CheckBox
                android:id="@+id/chkIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/income_benefit_on_accidental_disability" />

            <CheckBox
                android:id="@+id/chkCritical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/critical_illness_riser" />

            <CheckBox
                android:id="@+id/chkCancer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cancer_care_rider" />

            <CheckBox
                android:id="@+id/chkPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/personal_accident_cover_rider" />

            <CheckBox
                android:id="@+id/chkAccident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/accident_death_cover" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_bg"
                android:onClick="onUpdateLifeFilter"
                android:text="@string/update"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>