<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/btnRemove"
                android:minWidth="200dp"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edtAddMobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:minWidth="200dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtOtp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/txtInput"
                android:minWidth="200dp"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edtOtp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autofillHints=""
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:minWidth="200dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/btnRemove"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_remove" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/cvMobile"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_backgroud"
        android:onClick="onMobileSubmit"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />
</RelativeLayout>